additional pmd fixes